--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.main.view.SearchResultsActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
         <activity android:name=".ui.main.view.CategoryActivity" />
+        <activity android:name=".ui.main.view.RecipeActivity" />
+        <meta-data android:name="android.app.default_searchable"
+            android:value="com.nesti.nestimobile.ui.main.view.SearchResultsActivity" />
     </application>
-
 </manifest>
